2006-11-14  Havoc Pennington  <hp@redhat.com>

	* dbus/dbus-internals.c (_dbus_generate_uuid): The spec said the
	UUID had the timestamp last, but the implementation had it first;
	move it to last since I think it's a tiny bit nicer (easier to
	compare at a glance, faster to sort, less code), and will not
	cause any practical compatibility problems. Also, always convert
	the timestamp to big endian.

	* doc/dbus-specification.xml: Clean up the docs on the UUID.

	* tools/dbus-uuidgen.1: more prominently say it is not suitable
	as a replacement for regular uuidgen/RFC4122.

2006-11-14  John (J5) Palmieri  <johnp@redhat.com>

	* configure.in: Bump version to 1.0.1 for next stable release

	* dbus/dbus-threads.h: fix DBUS_THREAD_FUNCTIONS_ALL_MASK to have
	the correct value so we don't assert when initalizing recursive threads

	* test/name-test/test-thread-init.c: call dbus_threads_init_default
	instead of _dbus_threads_init_debug since it is more of a real world
	test

2006-11-09  John (J5) Palmieri  <johnp@redhat.com>

	* Released 1.0.0

2006-11-09  John (J5) Palmieri  <johnp@redhat.com>

	* AUTHORS: added Peter and Tor of windows porting fame

2006-11-08  Havoc Pennington  <hp@redhat.com>

	* doc/dbus-specification.xml: add a note about protocol stability

	* doc/TODO: Remove "important for 1.0" section, replace with
	"important for 1.2" section
	
2006-11-08  John (J5) Palmieri  <johnp@redhat.com>

	* README: remove some of the out of date flags

	* doc/TODO: Remove todo items which are done

2006-11-08  John (J5) Palmieri  <johnp@redhat.com>

	* tools/dbus-monitor.c: Handle sigint so we flush stdout
	(Patch from Olli Salli <olli dot salli at collabora dot co dot uk>)

2006-11-08  John (J5) Palmieri  <johnp@redhat.com>

	* tools/dbus-monitor.1: update the manpage for dbus-monitor
	(Patch from Olli Salli <olli dot salli at collabora dot co dot uk>)

2006-11-08  John (J5) Palmieri  <johnp@redhat.com>

	* AUTHORS: Update with all people listed in the ChangeLog
