@@ -36,6 +36,7 @@ dbus_bool_t _dbus_marshal_recursive_test (void);
 dbus_bool_t _dbus_marshal_byteswap_test  (void);
 dbus_bool_t _dbus_marshal_header_test    (void);
 dbus_bool_t _dbus_marshal_validate_test  (void);
+dbus_bool_t _dbus_misc_test              (void);
 dbus_bool_t _dbus_signature_test         (void);
 dbus_bool_t _dbus_mem_pool_test          (void);
 dbus_bool_t _dbus_string_test            (void);
